tests/snapshots/run_wpt_conformance__trtx_scatterElements_float32_3D_tensors_along_axis_1_and_constant_negative_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "scatterElements.https.any.js",
    "scatterElements float32 3D tensors along axis 1 and constant negative indices",
    "trtx",
    "PASS",
)
