tests/snapshots/run_wpt_conformance__trtx_scatterElements_float32_tensors_along_axis_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "scatterElements.https.any.js",
    "scatterElements float32 tensors along axis 1",
    "trtx",
    "PASS",
)
